Upgrade to latest sw version
